<resources>
    <string name="app_name">Desafio Boticario</string>
    <string name="jonas_name">Jonas Rodrigo Marini</string>
    <string name="jonas_email">jonas.marini.tot@gmail.com</string>
    <string name="email_hint">E-mail</string>
    <string name="password_hint">Senha</string>
    <string name="confirm_password_hint">Confirme a senha</string>
    <string name="login_btn">Login</string>
    <string name="register_btn">Cadastrar</string>
    <string name="not_account">Ainda não tem uma conta?</string>
    <string name="click_to_register">Clique para se registrar</string>
    <string name="name_hint">Nome</string>
    <string name="menu_posts">Postagens</string>
    <string name="menu_news_boticario">Novidades do Boticário</string>
    <string name="menu_exit">Sair</string>
    <string name="no_news">Não há novidades</string>
    <string name="no_internet">Verifique a sua conexão com a Internet e tente novamente.</string>
    <string name="no_posts">Não há postagens</string>
    <string name="new_post">Nova Postagem</string>
    <string name="edit_post">Editar Postagem</string>
    <string name="new_post_hint">Digite a nova Postagem…</string>
    <string name="confirm">Confirmar</string>
    <string name="cancel">Cancelar</string>
    <string name="limit_characters">Limite de 280 caracteres.</string>
    <string name="login_error">Erro de login, verifique se o email e a senha estão corretos.</string>
    <string name="email_registered">Este email já está cadastrado</string>
    <string name="successfully_registered">Usuário cadastrado com sucesso</string>
    <string name="delete_post_title">Deletar Postagem</string>
    <string name="delete_post_description">Deseja deletar essa postagem?</string>
    <string name="yes">Sim</string>
    <string name="no">Não</string>
</resources>