<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="true"
    android:focusableInTouchMode="true"
    tools:context=".RegisterActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fillViewport="true"
        android:padding="16dp"
        android:fitsSystemWindows="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/layout_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="10dp"
            android:clipToPadding="false"
            android:layout_gravity="center_vertical">

            <ImageView
                android:id="@+id/img_register"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:contentDescription="@string/app_name"
                android:src="@drawable/logo_flower"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/input_register_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:textColorHint="@color/white"
                app:boxStrokeErrorColor="@color/white"
                app:hintTextColor="@color/white"
                app:boxStrokeColor="@drawable/text_input_colors"
                app:errorTextColor="@color/white"
                app:placeholderTextColor="@color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:errorIconDrawable="@null"
                app:layout_constraintTop_toBottomOf="@+id/img_register"
                style="@style/OutlinedRoundedBox">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/register_edit_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:textCursorDrawable="@drawable/cursor_color_white"
                    android:drawablePadding="5dp"
                    android:hint="@string/name_hint"
                    android:inputType="text"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/input_register_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:textColorHint="@color/white"
                app:boxStrokeErrorColor="@color/white"
                app:hintTextColor="@color/white"
                app:boxStrokeColor="@drawable/text_input_colors"
                app:errorTextColor="@color/white"
                app:placeholderTextColor="@color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:errorIconDrawable="@null"
                app:layout_constraintTop_toBottomOf="@+id/input_register_name"
                style="@style/OutlinedRoundedBox">

                <EditText
                    android:id="@+id/register_edit_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:textCursorDrawable="@drawable/cursor_color_white"
                    android:drawablePadding="5dp"
                    android:hint="@string/email_hint"
                    android:inputType="textEmailAddress" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/input_register_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:textColorHint="@color/white"
                app:boxStrokeErrorColor="@color/white"
                app:hintTextColor="@color/white"
                app:boxStrokeColor="@drawable/text_input_colors"
                app:errorTextColor="@color/white"
                app:placeholderTextColor="@color/white"
                app:passwordToggleEnabled="true"
                app:passwordToggleTint="@color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/input_register_email"
                app:errorIconDrawable="@null"
                style="@style/OutlinedRoundedBox">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/register_edit_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawablePadding="5dp"
                    android:textColor="@color/white"
                    android:textCursorDrawable="@drawable/cursor_color_white"
                    android:hint="@string/password_hint"
                    android:inputType="textPassword" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/input_register_confirm_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:textColorHint="@color/white"
                app:boxStrokeErrorColor="@color/white"
                app:hintTextColor="@color/white"
                app:boxStrokeColor="@drawable/text_input_colors"
                app:errorTextColor="@color/white"
                app:placeholderTextColor="@color/white"
                app:passwordToggleEnabled="true"
                app:passwordToggleTint="@color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:errorIconDrawable="@null"
                app:layout_constraintTop_toBottomOf="@+id/input_register_password"
                style="@style/OutlinedRoundedBox">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/register_edit_confirm_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawablePadding="5dp"
                    android:textColor="@color/white"
                    android:textCursorDrawable="@drawable/cursor_color_white"
                    android:hint="@string/confirm_password_hint"
                    android:imeOptions="actionDone"
                    android:inputType="textPassword" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_register"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/register_btn"
                style="@style/AppTheme.Button"
                android:background="@drawable/rounded_button"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/input_register_confirm_password" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>